syntax = "proto3";
package com.cainsgl.grpc;
option java_package = "com.cainsgl.grpc.api";
option java_outer_classname = "TestServiceProto";
option java_multiple_files = true;

message TestRequest {
  string test = 1;
}
message TestResponse {
  string message = 2;
}
service TestService {
  // 测试Grpc
  rpc test (TestRequest) returns (TestResponse);
}